--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,13 @@
             <p><span <span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
         </div>
     </footer>
+    
+    <div class="modal">
+        <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Get in  <strong>Touch</strong></h2>
+        <div class="wrapper wrapper--narrow">
+            <p class="modal__description">We will have an online order system in place soon. Untill then, connect with us on any of the platforms below!</p>
+        </div>
+    </div>
     <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
