--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,13 @@
         <div class="wrapper wrapper--narrow">
             <p class="modal__description">We will have an online order system in place soon. Untill then, connect with us on any of the platforms below!</p>
         </div>
+        
+        <div class="social-icons">
+            <a href="#" class="social-icons__icon"> <span class="icon icon--facebook"></span></a>
+            <a href="#" class="social-icons__icon"> <span class="icon icon--twitter"></span></a>
+            <a href="#" class="social-icons__icon"> <span class="icon icon--instagram"></span></a>
+            <a href="#" class="social-icons__icon"> <span class="icon icon--youtube"></span></a>
+        </div>
     </div>
     <script src="/temp/scripts/App.js"></script>
 </body>
